--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title:  "Travel Demand Model Results Report"
+title:  "Wasatch Front Travel Demand Model Results"
 author: Wasatch Front Regional Council
 date-modified: last-modified
 ---
