--- a/0_InputProcessing/demo.ipynb
+++ b/0_InputProcessing/demo.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,15 @@
     "import sys\n",
     "import pandas as pd\n",
     "sys.path.append('..')\n",
-    "import globalpaths"
+    "import globalpaths\n",
+    "import plotly.express as px\n",
+    "import plotly.io as pio\n",
+    "pio.renderers.default = 'iframe_connected'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 375,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,6 +128,30 @@
     "    demo['%Diff'] = demo['%Diff'].astype(float)\n",
     "    demo = demo.round(0)\n",
     "    return demo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 382,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_job_sectors(co_name, long):\n",
+    "    sectors = ['RETL','FOOD','MANU','WSLE','OFFI','GVED','HLTH','OTHR','AGRI','MING','CONS','HBJ']\n",
+    "    bar_sectors = long.loc[long['CO_NAME'] == co_name]\n",
+    "    bar_sectors = bar_sectors.loc[bar_sectors['Variable'].isin(sectors)]\n",
+    "\n",
+    "    df = px.data.tips()\n",
+    "    fig = px.histogram(bar_sectors, x=\"Variable\", y=\"Value\", text_auto='.2s',\n",
+    "                 color='Type', barmode='group',\n",
+    "                 height=400)\n",
+    "    fig.update_layout(\n",
+    "        xaxis_title=\"Job Type\",\n",
+    "        yaxis_title=\"Number of Jobs\",\n",
+    "        legend_title=\"Data Type\"\n",
+    "    )\n",
+    "    #fig.update_xaxes(tickangle=90)\n",
+    "    fig.show()"
    ]
   },
   {
@@ -148,19 +175,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\cday\\AppData\\Local\\Temp\\ipykernel_21028\\2056949888.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\cday\\AppData\\Local\\Temp\\ipykernel_21028\\2056949888.py:4: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  demo['Variable'] = pd.Categorical(demo['Variable'], categories=variable_order, ordered=True)\n"
+      "\n"
      ]
     },
     {
@@ -195,20 +224,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Variable        category\n",
-       "ControlTotal     float64\n",
-       "Model            float64\n",
-       "Diff             float64\n",
-       "%Diff            float64\n",
-       "dtype: object"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -216,8 +231,7 @@
     "#| warning: False\n",
     "box_elder_demo = get_co_demo('BOX ELDER', control_model_pivot, var_order)\n",
     "markdown_df = box_elder_demo.to_markdown(index=False)\n",
-    "display(Markdown(markdown_df))\n",
-    "display(box_elder_demo.dtypes)"
+    "display(Markdown(markdown_df))"
    ]
   },
   {
@@ -228,6 +242,35 @@
     "```{=html}\n",
     "</details>\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 384,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe\n",
+       "    scrolling=\"no\"\n",
+       "    width=\"100%\"\n",
+       "    height=\"420\"\n",
+       "    src=\"iframe_figures/figure_384.html\"\n",
+       "    frameborder=\"0\"\n",
+       "    allowfullscreen\n",
+       "></iframe>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| echo: False\n",
+    "#| label: fig-be-sector\n",
+    "#| fig-cap: \"Box Elder Control Total vs. Modeled Number of Jobs by Job Type\"\n",
+    "plot_job_sectors('BOX ELDER', control_model_long)"
    ]
   },
   {
@@ -251,19 +294,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\cday\\AppData\\Local\\Temp\\ipykernel_21028\\2056949888.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\cday\\AppData\\Local\\Temp\\ipykernel_21028\\2056949888.py:4: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  demo['Variable'] = pd.Categorical(demo['Variable'], categories=variable_order, ordered=True)\n"
+      "\n"
      ]
     },
     {
@@ -319,6 +364,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 386,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe\n",
+       "    scrolling=\"no\"\n",
+       "    width=\"100%\"\n",
+       "    height=\"420\"\n",
+       "    src=\"iframe_figures/figure_386.html\"\n",
+       "    frameborder=\"0\"\n",
+       "    allowfullscreen\n",
+       "></iframe>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| echo: False\n",
+    "#| label: fig-we-sector\n",
+    "#| fig-cap: \"Weber Control Total vs. Modeled Number of Jobs by Job Type\"\n",
+    "plot_job_sectors('WEBER', control_model_long)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -339,19 +413,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\cday\\AppData\\Local\\Temp\\ipykernel_21028\\2056949888.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\cday\\AppData\\Local\\Temp\\ipykernel_21028\\2056949888.py:4: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  demo['Variable'] = pd.Categorical(demo['Variable'], categories=variable_order, ordered=True)\n"
+      "\n"
      ]
     },
     {
@@ -407,6 +483,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 388,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe\n",
+       "    scrolling=\"no\"\n",
+       "    width=\"100%\"\n",
+       "    height=\"420\"\n",
+       "    src=\"iframe_figures/figure_388.html\"\n",
+       "    frameborder=\"0\"\n",
+       "    allowfullscreen\n",
+       "></iframe>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| echo: False\n",
+    "#| label: fig-da-sector\n",
+    "#| fig-cap: \"Davis Control Total vs. Modeled Number of Jobs by Job Type\"\n",
+    "plot_job_sectors('DAVIS', control_model_long)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -427,19 +532,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\cday\\AppData\\Local\\Temp\\ipykernel_21028\\2056949888.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\cday\\AppData\\Local\\Temp\\ipykernel_21028\\2056949888.py:4: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  demo['Variable'] = pd.Categorical(demo['Variable'], categories=variable_order, ordered=True)\n"
+      "\n"
      ]
     },
     {
@@ -495,6 +602,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 390,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe\n",
+       "    scrolling=\"no\"\n",
+       "    width=\"100%\"\n",
+       "    height=\"420\"\n",
+       "    src=\"iframe_figures/figure_390.html\"\n",
+       "    frameborder=\"0\"\n",
+       "    allowfullscreen\n",
+       "></iframe>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| echo: False\n",
+    "#| label: fig-sl-sector\n",
+    "#| fig-cap: \"Salt Lake Control Total vs. Modeled Number of Jobs by Job Type\"\n",
+    "plot_job_sectors('SALT LAKE', control_model_long)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -515,19 +651,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\cday\\AppData\\Local\\Temp\\ipykernel_21028\\2056949888.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\cday\\AppData\\Local\\Temp\\ipykernel_21028\\2056949888.py:4: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  demo['Variable'] = pd.Categorical(demo['Variable'], categories=variable_order, ordered=True)\n"
+      "\n"
      ]
     },
     {
@@ -580,6 +718,77 @@
     "```{=html}\n",
     "</details>\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 394,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe\n",
+       "    scrolling=\"no\"\n",
+       "    width=\"100%\"\n",
+       "    height=\"420\"\n",
+       "    src=\"iframe_figures/figure_394.html\"\n",
+       "    frameborder=\"0\"\n",
+       "    allowfullscreen\n",
+       "></iframe>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| echo: False\n",
+    "#| label: fig-ut-sector\n",
+    "#| fig-cap: \"Utah Control Total vs. Modeled Number of Jobs by Job Type\"\n",
+    "plot_job_sectors('UTAH', control_model_long)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Checking SE File for inconsistencies:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below are the TAZIDs where the Sum of Employment Categories are not within 0.5 of the ALLEMP value:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 393,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[582, 583, 598, 677, 683, 684, 689, 740, 775, 794, 924]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| echo: False\n",
+    "model_cols2 = model_cols\n",
+    "model_cols2.append('Z')\n",
+    "model_filtered2 = model_se.loc[model_se['CO_NAME'].isin(model_cos), model_cols2]\n",
+    "model_filtered2['ALLEMP2'] = model_filtered2.iloc[:, model_filtered2.columns.get_loc('RETL'): model_filtered2.columns.get_loc('HBJ') + 1].sum(axis=1)\n",
+    "#z_values = model_filtered2.loc[model_filtered2['ALLEMP'] != model_filtered2['ALLEMP2'], 'Z'].tolist()\n",
+    "z_values = model_filtered2.loc[abs(model_filtered2['ALLEMP'] - model_filtered2['ALLEMP2']) > 0.5, 'Z'].tolist()\n",
+    "display(z_values)"
    ]
   }
  ],
