Frame the plots in drop downs

--- a/0_InputProcessing/demo.ipynb
+++ b/0_InputProcessing/demo.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 428,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,22 +132,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_job_sectors(co_name, long):\n",
-    "    sectors = ['RETL','FOOD','MANU','WSLE','OFFI','GVED','HLTH','OTHR','AGRI','MING','CONS','HBJ']\n",
+    "#| echo: False\n",
+    "def plot_demo(co_name, long, listvars):\n",
     "    bar_sectors = long.loc[long['CO_NAME'] == co_name]\n",
-    "    bar_sectors = bar_sectors.loc[bar_sectors['Variable'].isin(sectors)]\n",
+    "    bar_sectors = bar_sectors.loc[bar_sectors['Variable'].isin(listvars)]\n",
     "\n",
     "    df = px.data.tips()\n",
     "    fig = px.histogram(bar_sectors, x=\"Variable\", y=\"Value\", text_auto='.2s',\n",
     "                 color='Type', barmode='group',\n",
     "                 height=400)\n",
     "    fig.update_layout(\n",
-    "        xaxis_title=\"Job Type\",\n",
-    "        yaxis_title=\"Number of Jobs\",\n",
+    "        xaxis_title=\"Variable\",\n",
+    "        yaxis_title=\"Value\",\n",
     "        legend_title=\"Data Type\"\n",
     "    )\n",
     "    #fig.update_xaxes(tickangle=90)\n",
@@ -169,13 +169,13 @@
    "source": [
     "```{=html}\n",
     "<details>\n",
-    "<summary>Expand Table</summary>\n",
+    "<summary>Summary Table</summary>\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [
     {
@@ -241,12 +241,28 @@
    "source": [
     "```{=html}\n",
     "</details>\n",
+    "```\n",
+    "```{=html}\n",
+    "<details>\n",
+    "<summary>Total Households, Population, and Jobs</summary>\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 439,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| echo: False\n",
+    "sectors = ['RETL','FOOD','MANU','WSLE','OFFI','GVED','HLTH','OTHR','AGRI','MING','CONS','HBJ']\n",
+    "totals = ['TOTHH', 'HHPOP','ALLEMP']\n",
+    "enrols = ['ENROL_ELEM','ENROL_MIDL','ENROL_HIGH']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 440,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +272,48 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"420\"\n",
-       "    src=\"iframe_figures/figure_384.html\"\n",
+       "    src=\"iframe_figures/figure_440.html\"\n",
+       "    frameborder=\"0\"\n",
+       "    allowfullscreen\n",
+       "></iframe>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| echo: False\n",
+    "plot_demo('BOX ELDER', control_model_long, totals)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{=html}\n",
+    "</details>\n",
+    "```\n",
+    "```{=html}\n",
+    "<details>\n",
+    "<summary>Total Jobs by Job Sector</summary>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 441,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe\n",
+       "    scrolling=\"no\"\n",
+       "    width=\"100%\"\n",
+       "    height=\"420\"\n",
+       "    src=\"iframe_figures/figure_441.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -270,7 +327,58 @@
     "#| echo: False\n",
     "#| label: fig-be-sector\n",
     "#| fig-cap: \"Box Elder Control Total vs. Modeled Number of Jobs by Job Type\"\n",
-    "plot_job_sectors('BOX ELDER', control_model_long)"
+    "plot_demo('BOX ELDER', control_model_long, sectors)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{=html}\n",
+    "</details>\n",
+    "```\n",
+    "```{=html}\n",
+    "<details>\n",
+    "<summary>Total School Enrollment</summary>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 450,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe\n",
+       "    scrolling=\"no\"\n",
+       "    width=\"100%\"\n",
+       "    height=\"420\"\n",
+       "    src=\"iframe_figures/figure_450.html\"\n",
+       "    frameborder=\"0\"\n",
+       "    allowfullscreen\n",
+       "></iframe>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| echo: False\n",
+    "plot_demo('BOX ELDER', control_model_long, enrols)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{=html}\n",
+    "</details>\n",
+    "```"
    ]
   },
   {
@@ -288,13 +396,13 @@
    "source": [
     "```{=html}\n",
     "<details>\n",
-    "<summary>Expand Table</summary>\n",
+    "<summary>Summary Table</summary>\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 443,
    "metadata": {},
    "outputs": [
     {
@@ -360,12 +468,16 @@
    "source": [
     "```{=html}\n",
     "</details>\n",
+    "```\n",
+    "```{=html}\n",
+    "<details>\n",
+    "<summary>Total Households, Population, and Jobs</summary>\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 445,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +487,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"420\"\n",
-       "    src=\"iframe_figures/figure_386.html\"\n",
+       "    src=\"iframe_figures/figure_445.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -387,9 +499,99 @@
    ],
    "source": [
     "#| echo: False\n",
-    "#| label: fig-we-sector\n",
-    "#| fig-cap: \"Weber Control Total vs. Modeled Number of Jobs by Job Type\"\n",
-    "plot_job_sectors('WEBER', control_model_long)"
+    "plot_demo('WEBER', control_model_long, totals)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{=html}\n",
+    "</details>\n",
+    "```\n",
+    "```{=html}\n",
+    "<details>\n",
+    "<summary>Total Jobs by Job Sector</summary>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 451,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe\n",
+       "    scrolling=\"no\"\n",
+       "    width=\"100%\"\n",
+       "    height=\"420\"\n",
+       "    src=\"iframe_figures/figure_451.html\"\n",
+       "    frameborder=\"0\"\n",
+       "    allowfullscreen\n",
+       "></iframe>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| echo: False\n",
+    "plot_demo('WEBER', control_model_long, sectors)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{=html}\n",
+    "</details>\n",
+    "```\n",
+    "```{=html}\n",
+    "<details>\n",
+    "<summary>Total School Enrollment</summary>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 452,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe\n",
+       "    scrolling=\"no\"\n",
+       "    width=\"100%\"\n",
+       "    height=\"420\"\n",
+       "    src=\"iframe_figures/figure_452.html\"\n",
+       "    frameborder=\"0\"\n",
+       "    allowfullscreen\n",
+       "></iframe>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| echo: False\n",
+    "plot_demo('WEBER', control_model_long, enrols)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{=html}\n",
+    "</details>\n",
+    "```"
    ]
   },
   {
@@ -407,13 +609,13 @@
    "source": [
     "```{=html}\n",
     "<details>\n",
-    "<summary>Expand Table</summary>\n",
+    "<summary>Summary Table</summary>\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -479,12 +681,16 @@
    "source": [
     "```{=html}\n",
     "</details>\n",
+    "```\n",
+    "```{=html}\n",
+    "<details>\n",
+    "<summary>Total Households, Population, and Jobs</summary>\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 453,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +700,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"420\"\n",
-       "    src=\"iframe_figures/figure_388.html\"\n",
+       "    src=\"iframe_figures/figure_453.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -506,9 +712,99 @@
    ],
    "source": [
     "#| echo: False\n",
-    "#| label: fig-da-sector\n",
-    "#| fig-cap: \"Davis Control Total vs. Modeled Number of Jobs by Job Type\"\n",
-    "plot_job_sectors('DAVIS', control_model_long)"
+    "plot_demo('DAVIS', control_model_long, totals)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{=html}\n",
+    "</details>\n",
+    "```\n",
+    "```{=html}\n",
+    "<details>\n",
+    "<summary>Total Jobs by Job Sector</summary>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 454,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe\n",
+       "    scrolling=\"no\"\n",
+       "    width=\"100%\"\n",
+       "    height=\"420\"\n",
+       "    src=\"iframe_figures/figure_454.html\"\n",
+       "    frameborder=\"0\"\n",
+       "    allowfullscreen\n",
+       "></iframe>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| echo: False\n",
+    "plot_demo('DAVIS', control_model_long, sectors)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{=html}\n",
+    "</details>\n",
+    "```\n",
+    "```{=html}\n",
+    "<details>\n",
+    "<summary>Total School Enrollment</summary>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 455,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe\n",
+       "    scrolling=\"no\"\n",
+       "    width=\"100%\"\n",
+       "    height=\"420\"\n",
+       "    src=\"iframe_figures/figure_455.html\"\n",
+       "    frameborder=\"0\"\n",
+       "    allowfullscreen\n",
+       "></iframe>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| echo: False\n",
+    "plot_demo('DAVIS', control_model_long, enrols)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{=html}\n",
+    "</details>\n",
+    "```"
    ]
   },
   {
@@ -526,13 +822,13 @@
    "source": [
     "```{=html}\n",
     "<details>\n",
-    "<summary>Expand Table</summary>\n",
+    "<summary>Summary Table</summary>\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -598,12 +894,16 @@
    "source": [
     "```{=html}\n",
     "</details>\n",
+    "```\n",
+    "```{=html}\n",
+    "<details>\n",
+    "<summary>Total Households, Population, and Jobs</summary>\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 456,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +913,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"420\"\n",
-       "    src=\"iframe_figures/figure_390.html\"\n",
+       "    src=\"iframe_figures/figure_456.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -625,9 +925,99 @@
    ],
    "source": [
     "#| echo: False\n",
-    "#| label: fig-sl-sector\n",
-    "#| fig-cap: \"Salt Lake Control Total vs. Modeled Number of Jobs by Job Type\"\n",
-    "plot_job_sectors('SALT LAKE', control_model_long)"
+    "plot_demo('SALT LAKE', control_model_long, totals)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{=html}\n",
+    "</details>\n",
+    "```\n",
+    "```{=html}\n",
+    "<details>\n",
+    "<summary>Total Jobs by Job Sector</summary>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 457,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe\n",
+       "    scrolling=\"no\"\n",
+       "    width=\"100%\"\n",
+       "    height=\"420\"\n",
+       "    src=\"iframe_figures/figure_457.html\"\n",
+       "    frameborder=\"0\"\n",
+       "    allowfullscreen\n",
+       "></iframe>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| echo: False\n",
+    "plot_demo('SALT LAKE', control_model_long, sectors)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{=html}\n",
+    "</details>\n",
+    "```\n",
+    "```{=html}\n",
+    "<details>\n",
+    "<summary>Total School Enrollment</summary>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 458,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe\n",
+       "    scrolling=\"no\"\n",
+       "    width=\"100%\"\n",
+       "    height=\"420\"\n",
+       "    src=\"iframe_figures/figure_458.html\"\n",
+       "    frameborder=\"0\"\n",
+       "    allowfullscreen\n",
+       "></iframe>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| echo: False\n",
+    "plot_demo('SALT LAKE', control_model_long, enrols)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{=html}\n",
+    "</details>\n",
+    "```"
    ]
   },
   {
@@ -645,13 +1035,13 @@
    "source": [
     "```{=html}\n",
     "<details>\n",
-    "<summary>Expand Table</summary>\n",
+    "<summary>Summary Table</summary>\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -717,12 +1107,16 @@
    "source": [
     "```{=html}\n",
     "</details>\n",
+    "```\n",
+    "```{=html}\n",
+    "<details>\n",
+    "<summary>Total Households, Population, and Jobs</summary>\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 448,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +1126,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"420\"\n",
-       "    src=\"iframe_figures/figure_394.html\"\n",
+       "    src=\"iframe_figures/figure_448.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -744,9 +1138,99 @@
    ],
    "source": [
     "#| echo: False\n",
-    "#| label: fig-ut-sector\n",
-    "#| fig-cap: \"Utah Control Total vs. Modeled Number of Jobs by Job Type\"\n",
-    "plot_job_sectors('UTAH', control_model_long)"
+    "plot_demo('UTAH', control_model_long, totals)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{=html}\n",
+    "</details>\n",
+    "```\n",
+    "```{=html}\n",
+    "<details>\n",
+    "<summary>Total Jobs by Job Sector</summary>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 459,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe\n",
+       "    scrolling=\"no\"\n",
+       "    width=\"100%\"\n",
+       "    height=\"420\"\n",
+       "    src=\"iframe_figures/figure_459.html\"\n",
+       "    frameborder=\"0\"\n",
+       "    allowfullscreen\n",
+       "></iframe>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| echo: False\n",
+    "plot_demo('UTAH', control_model_long, sectors)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{=html}\n",
+    "</details>\n",
+    "```\n",
+    "```{=html}\n",
+    "<details>\n",
+    "<summary>Total School Enrollment</summary>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 460,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe\n",
+       "    scrolling=\"no\"\n",
+       "    width=\"100%\"\n",
+       "    height=\"420\"\n",
+       "    src=\"iframe_figures/figure_460.html\"\n",
+       "    frameborder=\"0\"\n",
+       "    allowfullscreen\n",
+       "></iframe>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| echo: False\n",
+    "plot_demo('UTAH', control_model_long, enrols)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{=html}\n",
+    "</details>\n",
+    "```"
    ]
   },
   {
@@ -767,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
